@@ -33,8 +33,8 @@ s3service.https-only=true
 
 s3service.internal-error-retry-max=5
 
-s3service.max-thread-count=4
-s3service.admin-max-thread-count=10
+s3service.max-thread-count=10
+s3service.admin-max-thread-count=20
 
 s3service.default-bucket-location=US
 
@@ -61,7 +61,7 @@ cloudfront-service.internal-error-retry-max=5
 # REST/HTTP HttpClient Implementation properties
 ###
 
-httpclient.max-connections=10
+httpclient.max-connections=20
 #httpclient.max-connections-per-host=5
 
 httpclient.retry-max=5
