@@ -8,6 +8,10 @@ TOOLKIT
 
 - Added support for private and streaming CloudFront distributions (see 
   below)
+- Improved default performance settings with the assumption that everyone's
+  Internet connections have become faster over the last three years. The 
+  default property settings for maximum simultaneous threads and 
+  connections are increased to 10 and 20 respectively. 
 - Improved compatibility with other S3 tools by setting the following
   properties to true by default: 
   "filecomparer.ignore-panic-dir-placeholders"
